拿demo重新写一遍,第三问去重,最后一问看不懂它在讲什么东西